@@ -1,3 +1,12 @@
+2010-08-02  Andy Buckley  <andy@insectnation.org>
+
+	* Adding graceful exception handling to the AnalysisHandler event
+	loop methods.
+
+	* Changing compare-histos behaviour to always show plots for which
+	there is at least one MC histo. The default behaviour should now
+	be the correct one in 99% of use cases.
+
 2010-07-30  Andy Buckley  <andy@insectnation.org>
 
 	* Merging in a fix for shared_ptrs not being compared for
